Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51704

QtCharts plugins.qmltype file provides a wrong namespace for QLegend

XMLWordPrintable

    • f6c9d0b59603d32a3a91dd166239429b3b056c6e b36af85eac67c2e92b35849b34d913ee0290cd2b

      As mentioned in subject a wrong namespace provided for the QLegend in plugins.qmltype. Thus Qt Creator will not see a property legend of the ChartsView.

      The workaround for this issue is to change this line

      Property { name: "legend"; type: "QLegend"; isReadonly: true; isPointer: true }
      

      to this

      Property { name: "legend"; type: "QtCharts::QLegend"; isReadonly: true; isPointer: true }
      

        1. plugins.qmltypes
          107 kB
          Kai Köhne
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes